// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render component when can back 1`] = `
<header
  className="sc-bwzfXH geYBAS"
>
  <div
    className="sc-bdVaJa flBAph"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="sc-bxivhb iUaUQC"
      color="#fff"
      data-test="back"
      onClick={[MockFunction]}
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </span>
  </div>
  <h1
    className="sc-htpNat eSnwWs"
  >
    This is title
  </h1>
</header>
`;

exports[`<Header /> should render component when can not back 1`] = `
<header
  className="sc-bwzfXH ksdvTF"
>
  <h1
    className="sc-htpNat eSnwWs"
  >
    This is title
  </h1>
</header>
`;

exports[`<Header /> should render component when can search 1`] = `
<header
  className="sc-bwzfXH ksdvTF"
>
  <h1
    className="sc-htpNat eSnwWs"
  >
    This is title
  </h1>
  <div
    className="sc-bdVaJa flBAph"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="sc-bxivhb iUaUQC"
      color="#fff"
      data-test="search"
      onClick={[MockFunction]}
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-1"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </div>
</header>
`;
